--- a/index.html
+++ b/index.html
@@ -2,14 +2,41 @@
 <html>
 
 <head>
-	<title>malgojaviro</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" type="text/css" href="main.css">
+    <title>malgojaviro</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-    <p>init</p>
+    <p>hi,<br />
+        i'm anton nesterov, product and ui designer. for the last 4 years i've been doing lots of different stuff, mostly dashboard and website, at <a href="https://uploadcare.com">uploadcare</a>. i know a thing or two about programmer-oriented design and a product side of a comlicated engineering tool. i write some code — html, css, a bit of js.
+    </p>
+    <h2>previously</h2>
+    <ul> 
+        <li>ui/ux designer @ <a href="https://whitescape.com">whitescape</a> 2016—2018</li>
+        <li>graphics designer @ <a href="https://logomotiv.ru">logomotiv</a> 2011—2016</li>
+    </ul>
+    <h2>archive</h2>
+    <ul> 
+        <li><a href="https://lmbd.ru">lmbd</a></li>
+        <li><a href="https://www.behance.net/gallery/85873533/Mobile-marketplace-ofchildren-activities-in-Russia">kidkin</a></li>
+    </ul>
+    <h2>visual trail</h2>
+    <ul> 
+        <li>thumblr</li>
+        <li>behance</li>
+    </ul>
+    <h2>side projects</h2>
+    <ul> 
+        <li>music</li>
+        <li>tg channel (soon)</li>
+    </ul>
+    <h2>message me</h2>
+    <ul>
+        <li><a href="https://t.me/malgojaviro">t:@malgojaviro</a></li>
+        <li><a href="mailto:hello@malgojaviro.me"></a>hello@malgojaviro.me</li>
+    </ul>
 </body>
 
 </html>
