--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <body>
     <p>hi,<br />
-        i'm anton nesterov, product and ui designer. for the last 4 years i've been doing lots of different stuff, mostly dashboard and website, at <a href="https://uploadcare.com">uploadcare</a>. i know a thing or two about programmer-oriented design and a product side of a comlicated engineering tool. i write some code — html, css, a bit of js.
+        i'm anton nesterov, product and ui designer at <a href="https://uploadcare.com">uploadcare</a>. i&nbsp;know a thing or two about programmer-oriented design and the product side of a comlicated engineering tools. i&nbsp;write some <a href="https://github.com/malgojaviro">code</a> — html, css, a bit of&nbsp;js.
     </p>
     <h2>previously</h2>
     <ul> 
         <li>ui/ux designer @ <a href="https://whitescape.com">whitescape</a> 2016—2018</li>
         <li>graphics designer @ <a href="https://logomotiv.ru">logomotiv</a> 2011—2016</li>
+		<li><a href="https://www.linkedin.com/in/anton-nesterov/">linkedin</a></li>
     </ul>
     <h2>archive</h2>
     <ul> 
@@ -24,18 +25,13 @@
     </ul>
     <h2>visual trail</h2>
     <ul> 
-        <li>thumblr</li>
-        <li>behance</li>
-    </ul>
-    <h2>side projects</h2>
-    <ul> 
-        <li>music</li>
-        <li>tg channel (soon)</li>
+        <li><a href="https://malgojaviro.tumblr.com/">thumblr</a></li>
+        <li><a href="https://www.behance.net/malgojaviro">behance</a></li>
     </ul>
     <h2>message me</h2>
     <ul>
-        <li><a href="https://t.me/malgojaviro">t:@malgojaviro</a></li>
-        <li><a href="mailto:hello@malgojaviro.me"></a>hello@malgojaviro.me</li>
+        <li><a href="https://t.me/malgojaviro">telegram</a></li>
+        <li><a href="mailto:hello@malgojaviro.me">email</a></li>
     </ul>
 </body>
 
