--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     </p>
     <h2>previously</h2>
     <ul> 
-        <li>ui/ux designer @ <a href="https://whitescape.com">whitescape</a> 2016—2018</li>
-        <li>graphics designer @ <a href="https://logomotiv.ru">logomotiv</a> 2011—2016</li>
-		<li><a href="https://www.linkedin.com/in/anton-nesterov/">linkedin</a></li>
+        <li>ui/ux designer @ whitescape 2016—2018</li>
+        <li>graphics designer @ logomotiv 2011—2016</li>
     </ul>
     <h2>archive</h2>
     <ul> 
