--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <p>hi,<br />
-        i'm anton nesterov, product and ui designer, enterpreneur. сurrently my primary client is <a href="https://uploadcare.com">uploadcare</a>. i&nbsp;know a thing or two about programmer-oriented design and the product side of a comlicated engineering tools. i&nbsp;write some <a href="https://github.com/malgojaviro">code</a> — html, css, a bit of&nbsp;js.
+        i'm anton nesterov, product and ui designer, enterpreneur. Currently my primary client is <a href="https://uploadcare.com">uploadcare</a>. i&nbsp;know a thing or two about programmer-oriented design and the product side of a comlicated engineering tools. i&nbsp;write some <a href="https://github.com/malgojaviro">code</a> — html, css, a bit of&nbsp;js.
     </p>
     <h2>previously</h2>
     <ul> 
