--- a/index.html
+++ b/index.html
@@ -9,30 +9,40 @@
 </head>
 
 <body>
-    <p>hi,<br />
-        i'm anton nesterov, product and ui designer at <a href="https://uploadcare.com">uploadcare</a>. i&nbsp;know a thing or two about programmer-oriented design and the product side of a complex engineering tools. i&nbsp;write some <a href="https://github.com/malgojaviro">code</a> — html, css, a bit of&nbsp;js.
-    </p>
-    <h2>previously</h2>
-    <ul> 
-        <li>ui/ux designer @ <a href="https://whitescape.com">whitescape</a> 2016—2018</li>
-        <li>graphics designer @ <a href="https://logomotiv.ru">logomotiv</a> 2011—2016</li>
-		<li><a href="https://www.linkedin.com/in/anton-nesterov/">linkedin</a></li>
-    </ul>
-    <h2>archive</h2>
-    <ul> 
-        <li><a href="https://lmbd.ru">lmbd</a></li>
-        <li><a href="https://www.behance.net/gallery/85873533/Mobile-marketplace-ofchildren-activities-in-Russia">kidkin</a></li>
-    </ul>
-    <h2>visual trail</h2>
-    <ul> 
-        <li><a href="https://malgojaviro.tumblr.com/">thumblr</a></li>
-        <li><a href="https://www.behance.net/malgojaviro">behance</a></li>
-    </ul>
-    <h2>message me</h2>
-    <ul>
-        <li><a href="https://t.me/malgojaviro">telegram</a></li>
-        <li><a href="mailto:hello@malgojaviro.me">email</a></li>
-    </ul>
+    <header>
+        <div><h1>👋, I'm Anton Nesterov, product designer at <a href="https://uploadcare.com">Uploadcare</a>.</h1> I&nbsp;know a thing or two about programmer-oriented design and the product side of a complex engineering tools. I&nbsp;write some <a href="https://github.com/malgojaviro">code</a>.</div>
+        <nav>
+            <ul class="right">
+                <li>message me</li>
+                <li>thumblr</li>
+                <li>behance</li>
+                <li>cv.pdf</li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section>
+        <h2><span class="grey">Uploadcare → </span>File uploader</h2>
+        <div class="showcase"></div>
+    </section>
+    <section>
+        <h2><span class="grey">Uploadcare → </span>File uploader</h2>
+        <div class="showcase"></div>
+    </section>
+    <section>
+        <h2><span class="grey">Uploadcare → </span>File uploader</h2>
+        <div class="showcase"></div>
+    </section>
+    <footer>
+        <ul> 
+            <li>2018—NOW Product designer @ <a href="https://uploadcare.com">Uploadcare</a></li>
+            <li>2016—2018 UI/UX designer @ <a href="https://dribbble.com/whitescape">Whitescape</a></li>
+            <li>2011—2016 Graphics and UI/UX designer @ <a href="https://logomotiv.ru">Logomotiv</a></li>
+        </ul>
+        <ul class="right"> 
+            <li>Belgrade, Serbia</li>
+            <li>Saint-Petersburg, Russia</li>
+        </ul>
+    </footer>
 </body>
-
 </html>
