--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 
 <body>
     <header>
-        <div><h1>👋, I'm Anton Nesterov, product designer at <a href="https://uploadcare.com">Uploadcare</a>.</h1> I&nbsp;know a thing or two about programmer-oriented design and the product side of a complex engineering tools. I&nbsp;write some <a href="https://github.com/malgojaviro">code</a>.</div>
-        <nav>
-            <ul class="right">
-                <li>message me</li>
-                <li>thumblr</li>
-                <li>behance</li>
-                <li>cv.pdf</li>
-            </ul>
-        </nav>
+        <div><h1>👋, I'm Anton Nesterov, product designer at <a href="https://uploadcare.com" target="_blank" class="blank">Uploadcare</a>.</h1> I&nbsp;know a thing or two about programmer-oriented design and the product side of a complex engineering tools. I&nbsp;write some <a href="https://github.com/malgojaviro">code</a>.</div>
     </header>
-    
-    <section>
-        <h2><span class="grey">Uploadcare → </span>File uploader</h2>
-        <div class="showcase"></div>
-    </section>
-    <section>
-        <h2><span class="grey">Uploadcare → </span>File uploader</h2>
-        <div class="showcase"></div>
-    </section>
-    <section>
-        <h2><span class="grey">Uploadcare → </span>File uploader</h2>
-        <div class="showcase"></div>
-    </section>
+    <nav>
+        <ul>
+            <li>email</li>
+            <li>thumblr</li>
+            <li>behance</li>
+            <li>linkedin</li>
+            <li>cv.pdf</li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2><span class="grey">Uploadcare → </span>File uploader</h2>
+            <div class="showcase"></div>
+        </section>
+        <section>
+            <h2><span class="grey">Uploadcare → </span>File uploader</h2>
+            <div class="showcase"></div>
+        </section>
+        <section>
+            <h2><span class="grey">Uploadcare → </span>File uploader</h2>
+            <div class="showcase"></div>
+        </section>
+    </main>
     <footer>
-        <ul> 
-            <li>2018—NOW Product designer @ <a href="https://uploadcare.com">Uploadcare</a></li>
+        <ul class="places"> 
+            <li>2018—<span class="now">NOW</span> Product designer @ <a href="https://uploadcare.com">Uploadcare</a></li>
             <li>2016—2018 UI/UX designer @ <a href="https://dribbble.com/whitescape">Whitescape</a></li>
             <li>2011—2016 Graphics and UI/UX designer @ <a href="https://logomotiv.ru">Logomotiv</a></li>
         </ul>
-        <ul class="right"> 
+        <ul class="location"> 
             <li>Belgrade, Serbia</li>
             <li>Saint-Petersburg, Russia</li>
         </ul>
