navigation animations done

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </header>
     <nav>
         <ul>
-            <li>email</li>
-            <li>thumblr</li>
-            <li>behance</li>
-            <li>linkedin</li>
-            <li>cv.pdf</li>
+            <li><a href="#">email</a></li>
+            <li><a href="#">thumblr</a></li>
+            <li><a href="#">behance</a></li>
+            <li><a href="#">linkedin</a></li>
+            <li><a href="#">cv.pdf</a></li>
         </ul>
     </nav>
     <main>
