uploader animation done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,22 @@
     <main>
         <section>
             <h2><span class="grey">Uploadcare → </span>File uploader</h2>
-            <div class="showcase"></div>
+            <div class="showcase uploader">
+                <div class="center-wrapper">
+                    <img class="uploader-palmas" srcset="assets/uploader-palmas.jpg 1x, assets/uploader-palmas@2x.jpg 2x" src="assets/uploader-palmas.jpg"
+                    alt="Some palmas from Unsplash" />
+                    <img class="uploader-typewriter" srcset="assets/uploader-typewriter.jpg 1x, assets/uploader-typewriter@2x.jpg 2x" src="assets/uploader-typewriter.jpg"
+                    alt="Some typewriter from Unsplash" />
+                    <img class="uploader-menu shadow" srcset="assets/uploader-menu.png 1x, assets/uploader-menu@2x.png 2x" src="assets/uploader-menu.png"
+                    alt="File Uploader sources menu" />
+                    <img class="uploader-camera shadow" srcset="assets/uploader-camera.jpg 1x, assets/uploader-camera@2x.jpg 2x" src="assets/uploader-camera.jpg"
+                    alt="File Uploader camera window" />
+                    <img class="uploader-panel shadow" srcset="assets/uploader-panel.png 1x, assets/uploader-panel@2x.png 2x" src="assets/uploader-panel.png"
+                    alt="File Uploader files list" />
+                    <img class="uploader-floating shadow" srcset="assets/uploader-floating.png 1x, assets/uploader-floating@2x.png 2x" src="assets/uploader-floating.png"
+                    alt="File Uploader status bar" />
+                </div>
+            </div>
         </section>
         <section>
             <h2><span class="grey">Uploadcare → </span>File uploader</h2>
