--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
 
 <body>
     <header>
-        <div><h1>👋, I'm Anton Nesterov, product designer at <a href="https://uploadcare.com" target="_blank" class="blank">Uploadcare</a>.</h1> I&nbsp;know a thing or two about programmer-oriented design and the product side of a complex engineering tools. I&nbsp;write some <a href="https://github.com/malgojaviro">code</a>.</div>
+        <div><h1>👋, I'm Anton Nesterov, product designer at <a href="https://uploadcare.com" target="_blank" class="blank">Uploadcare</a>.</h1> I&nbsp;know a thing or two about programmer-centred design and the product side of a complex engineering tools. I&nbsp;write some <a href="https://github.com/malgojaviro">code</a>.</div>
     </header>
+
     <nav>
         <ul>
             <li><a href="#">email</a></li>
-            <li><a href="#">thumblr</a></li>
-            <li><a href="#">behance</a></li>
-            <li><a href="#">linkedin</a></li>
             <li><a href="#">cv.pdf</a></li>
         </ul>
     </nav>
+
     <main>
         <section>
             <h2><span class="grey">Uploadcare → </span>File uploader</h2>
-            <div class="showcase uploader">
+            <a href="#" class="showcase uploader">
                 <div class="center-wrapper">
                     <img class="uploader-palmas" srcset="assets/uploader-palmas.jpg 1x, assets/uploader-palmas@2x.jpg 2x" src="assets/uploader-palmas.jpg"
                     alt="Some palmas from Unsplash" />
@@ -45,7 +44,8 @@
                     <img class="uploader-floating shadow" srcset="assets/uploader-floating.png 1x, assets/uploader-floating@2x.png 2x" src="assets/uploader-floating.png"
                     alt="File Uploader status bar" />
                 </div>
-            </div>
+                <div class="whereto">uploadcare.com →</div>
+            </a>
         </section>
         <section>
             <h2><span class="grey">Uploadcare → </span>File uploader</h2>
@@ -65,6 +65,13 @@
         <ul class="location"> 
             <li>Belgrade, Serbia</li>
             <li>Saint-Petersburg, Russia</li>
+        </ul>
+        <ul class="links">
+            <li><a href="#">email</a></li>
+            <li><a href="#">thumblr</a></li>
+            <li><a href="#">behance</a></li>
+            <li><a href="#">linkedin</a></li>
+            <li><a href="#">cv.pdf</a></li>
         </ul>
     </footer>
 </body>
