--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>previously</h2>
     <ul> 
         <li>ui/ux designer @ <a href="https://whitescape.com">whitescape</a> 2016—2018</li>
-        <li>graphics designer @ <a href="https://logomotiv.ru">logomotiv</a> 2011—2016</li>
+        <li>graphic designer @ <a href="https://logomotiv.ru">logomotiv</a> 2011—2016</li>
 		<li><a href="https://www.linkedin.com/in/anton-nesterov/">linkedin</a></li>
     </ul>
     <h2>archive</h2>
